did some changes on the modal footer and fixed the color for the dark mode too

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -637,7 +637,7 @@ textarea.flat-input,
 button.save-btn {
     color: var(--gray-2-color);
     position: relative;
-    top: 4px;
+    top: 2px;
     text-align: center;
     width: 80px;
     height: 32px;
